exact search for family

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,7 +13,7 @@
   <div class="h2-white pull-left">Search</div><br><br><br>
   <div class="well center">
     <%= form_tag(show_path, method: 'post', class:'') do %>
-      <%= text_field_tag :familyName, "", class: "form-control", placeholder: "Search by Family Name" %><br>
+      <%= text_field_tag :familyname, "", class: "form-control", placeholder: "Search by Family Name" %><br>
       <button type="submit" class=" btn-lg btn-primary">Search</button>
     <% end %>
 
