--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -8,7 +8,7 @@
     <div class="col-xs-6">
       <div class="well well-small">
 
-          <div class="title"><%= r.familyName %></div>
+          <div class="title"><%= r.familyname %></div>
 
       </div><!-- well end -->
     </div><!-- col end -->
