--- a/app/views/units/_form.html.erb
+++ b/app/views/units/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="well">
     <%= form_for [@unit] do |f| %>
     <div class="field">
-    <%= f.text_field :familyName, :placeholder => 'Family Name', :class => 'form-control input-lg' %>
+    <%= f.text_field :familyname, :placeholder => 'Family Name', :class => 'form-control input-lg' %>
     </div>
     <div class="field">
     <%= f.text_field :street, :placeholder => 'Street', :class => 'form-control input-lg' %>
