searching for families version 2 works with like

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -329,6 +329,11 @@ body {
   margin: 15px;
 }
 
+.btn-search{
+  height: 36px;
+  border-radius: 0px 7px 7px 0px;
+}
+
 .form-text-regular {
   font-size: 25px;
 }
