--- a/app/views/units/index.html.erb
+++ b/app/views/units/index.html.erb
@@ -23,16 +23,21 @@
 
         </div> <!-- col end -->
           <div class="col-sm-4">
-            <div class="people-box">
+            <div class="people-box center">
               <h3>Search for Family</h3>
-                <%= form_tag(units_path, method: :get) do %>
-                  <%= text_field_tag :familysearch %>
-                  <%= submit_tag 'Search' %>
-                <% end %><br>
+              <%= form_tag(units_path, :method => "get", id: "search-form") do %>
+               <div class="input-group">
+                  <%= text_field_tag :search, params[:search], placeholder: "Search Families", class: "form-control" %>
+                  <div class="input-group-btn">
+                    <%= submit_tag "Search", :name => nil, class: "btn-search btn-sm btn-primary  " %>
+                  </div> </div><!-- /btn-group -->
+                  </div><!-- /input-group -->
+              <% end %>
+
 
               <% if @searchResults %>
                 <% for unit in @searchResults %>
-                  <div>
+                  <div class="center">
                       <%= link_to "#{unit.familyname}", unit_path(unit), :class => "family-card btn" %><br>
                   </div>
                 <% end %>
