--- a/app/views/units/edit.html.erb
+++ b/app/views/units/edit.html.erb
@@ -1,10 +1,9 @@
 
 
-    <div>Unit - Specific family - Backup Edit</div><br><br>
-
-    <h4 class="pull-left">First and Last Name must be filled in.</h4>
+    <h3>Unit - Specific family - Backup Edit</h3><br>
     <br>
     <br>
+    <p>Only Letters, Numbers and Spaces allowed</>
     <%= render "form" %>
     </div>
   </div>
