--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,18 +6,9 @@
 
 
 <!-- Javascript form toggle -->
-<div class="edit_family btn btn-sm btn-warning">Search Toggle</div>
+<div class="edit_family btn btn-sm btn-warning">Toggle</div>
  <div class="edit_f">
-
-<!-- Not Currently Working -->
-  <div class="h2-white pull-left">Search</div><br><br><br>
-  <div class="well center">
-    <%= form_tag(show_path, method: 'post', class:'') do %>
-      <%= text_field_tag :familyname, "", class: "form-control", placeholder: "Search by Family Name" %><br>
-      <button type="submit" class=" btn-lg btn-primary">Search</button>
-    <% end %>
-
-
+   <p>test</p>
   </div><!-- search toggle end -->
 
    </div>
