--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
         <div class="col-sm-9 right-column">
           <div class="topbar">
 
-            <span class="pull-left shift-down grey"><%= flash[:notice] %></span>
+            <span class="pull-left shift-down grey"><%= flash[:notice] %><%= flash[:errors] %></span>
             <div class="login pull-right">
             <% if current_user %>
 
@@ -58,7 +58,6 @@
 
             </div>
           </div>
-
 
           <div class="content">
              <%= yield %>
