--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -106,6 +106,10 @@ h6 {
   text-align: center;
   font-size: .6em;
 }
+
+.h5-grey {
+  color: #999;
+}
 .va {
   vertical-align: middle;
 }
@@ -544,6 +548,11 @@ input[type="image"]
 
 
 //FAMILY - PEOPLE
+
+.family-list {
+  max-width: 230px;
+  padding-left: 10px;
+}
 
 .people-text {
   color: #d2d2d2;
