--- a/app/views/units/index.html.erb
+++ b/app/views/units/index.html.erb
@@ -9,18 +9,22 @@
 
       <%= link_to "New Family", new_unit_path, :class => "btn btn-sm btn-warning" %>
 
-      <br>
-      <br>
-    <h5 class="pull-left">Sort By: <%= link_to "A-Z", :sort_by => "familyname" %> | <%= link_to "Updated Recently", :sort_by => "updated_at desc" %> | <%= link_to "Create Date", :sort_by => "created_at" %></h5>
     <br>
-      <% if @unit.any? %>
-          <% @unit.each do |p1| %>
+    <br>
+    <div class="family-list">
+
+
+    <h5 class="center">Sort By:  <%= link_to "Updated Recently", :sort_by => "updated_at desc" %> | <%= link_to "A-Z", :sort_by => "familyname" %></h5>
+    <br>
+      <% if @units.any? %>
+          <% @units.each do |p1| %>
               <%= link_to "#{p1.familyname}", unit_path(p1), :class => "family-card btn" %><br>
           <% end %>
           <% else %>
             <h3 class="h2-white pull-left">No Families Yet</h3>
           <% end %>
-
+          <span class="h5-grey center"><%= will_paginate @units, :class => ""  %></span>
+        </div> <!-- family list -->
         </div> <!-- col end -->
           <div class="col-sm-4">
 
