--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
       <div class="row">
         <div class="col-sm-3 left-column center">
 
-          <div class="logo header-box">
+          <div class="logo logo-box">
             <%#= link_to image_tag("logo.png", :class => "logo img-responsive logo-center"), parts_path %>
             <%= link_to 'Momentum', root_path %>
           </div>
