Beautify and Stats Routes and Base Pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -725,5 +725,9 @@ input[type="image"]
     cursor: pointer;
     width: 300px;
     height: 80px;
+}
 
+
+li.selected {
+    background-color: #f90;
 }
