--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,11 +19,8 @@
           <nav class="nav">
             <li><%= link_to "Home", root_path, :class => 'notWorking' %></li>
             <li><%= link_to "People", units_path, :class => 'notWorking' %></li>
-
             <li><%= link_to "Serve", root_path, :class => 'notWorking' %></li>
-
-            <li><%= link_to "Stats", root_path, :class => 'notWorking' %></li>
-
+            <li><%= link_to "Stats", stats_path, :class => 'notWorking' %></li>
             <hr>
             <li><%= link_to "Departments", root_path, :class => 'notWorking' %></li>
             <li><%= link_to "Events", root_path, :class => 'notWorking' %></li>
