--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -5,11 +5,18 @@
         <div class="h2-white">Stats - Index</div>
         <br><br>
 
-
-
-
-
-
+        <div class="h3-white">Users</div>
+        <p>Total:<%= @users.count %></p>
+        <div class="h3-white">Families</div>
+        <p>Total:<%= @units.count %></p>
+        <p>Week: <%= @units7 %></p>
+        <p>Month: <%= @units30 %></p>
+        <p>Year: <%= @units365 %></p>
+        <div class="h3-white">People</div>
+        <p>Total:<%= @parts.count %></p>
+        <p>Week: <%= @parts7 %></p>
+        <p>Month: <%= @parts30 %></p>
+        <p>Year: <%= @parts365 %></p>
 
 
       </div>
