--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -86,6 +86,14 @@ h6 {
   vertical-align: middle;
 }
 
+.h3-white {
+  color: #fff;
+  font-size: 1.5em;
+  font-family: 'Bangers', cursive;
+  letter-spacing: 2px;
+  vertical-align: middle;
+}
+
 .h3-black {
   color: #000;
   font-size: 1.5em;
