--- a/app/views/units/index.html.erb
+++ b/app/views/units/index.html.erb
@@ -5,7 +5,7 @@
 
         <div class="h2-white">Units - Families - Index</div>
         <br><br>
-        <%= link_to "New Family", new_unit_path, :class => "btn btn-sm btn-warning" %>
+        <%= link_to "New Family", new_unit_path, :class => "btn btn-sm btn-primary" %>
         <br><br>
         <div class="family-list">
           <h5 class="center">Sort By:
