--- a/app/views/positions/show.html.erb
+++ b/app/views/positions/show.html.erb
@@ -1,13 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>Department:</b>
-  <%= @position.department.name %>
-</p>
-
-<p>
-  <b>Person:</b>
-  <%= @position.part.firstName %>
-</p>
-
-<%= link_to 'Edit', edit_position_path(@position) %> |
+  <!-- <b>Department:</b> -->
+  <%#= @position.department.name %>
+  <%#= @position.part.firstName %>
+  <%#= link_to 'Edit', edit_position_path(@position) %>
