--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -56,6 +56,44 @@
         <% end %>
         <% end %>
         <!-- of SearchResults end -->
+        <br><br>
+
+
+
+
+  <!-- SHOWS only positions in this Department -->
+  <div class="people-box">
+  <h4>People in this department</h4><br>
+      <% @positions.each do |position| %>
+      <!-- Filters only this department -->
+        <% if position.department.id === @department.id %>
+        <div class="people-btn">
+            <span class="grey-btn white">
+             <%= position.part.firstName %>
+            </span>
+            <span class="black">
+              <%= link_to "X", position, :class => "black", :id => "delete-test", :data => {:confirm => "Are you sure?",:method => "delete"}%>
+            </span><br><br>
+            </div>
+        <% end %>
+        <% end %> <!-- Filter end -->
+        <br>
+        <%= link_to 'Add Person', new_position_path, :class => "btn-sm btn-primary" %>
+
+</div>
+
+
+
+
+<!-- Original Version -->
+        <%# @positions.each do |position| %>
+          <%#= position.department.name %>
+                <%#= position.part.firstName %>
+            <%#= link_to 'Show', position %>
+            <%#= link_to 'Edit', edit_position_path(position) %>
+            <%#= link_to 'Delete', position, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <%# end %>
+        <%#= link_to 'New Position', new_position_path %>
 
 
       </div> <!-- col end -->
